# server/routes/root.go
@@ -8,7 +8,7 @@ import (
 func Root(group *echo.Group) {
 	group.GET("", controllers.Root)
 	group.GET("/health", controllers.Health)
-	group.POST("/hard-reset", controllers.HardReset)
+	group.POST("/reset", controllers.HardReset)
 	group.GET("/swagger", controllers.SwaggerUI)
 	group.GET("/swagger.yaml", controllers.SwaggerYAML)
 }
